--- a/exercicio01.html
+++ b/exercicio01.html
@@ -23,7 +23,7 @@ a IA está presente em diversos aspectos do nosso dia a dia.
     <h3>Abaixo, uma lista ordenada dos principais <b>benefícios</b> da IA:</h3>
 
     <ol>
-        <li><span style="color: goldenrod;">Automatização</span> de tarefas repetitivas</li>
+        <li><span style="color: goldenrod;"><u>Automatização<</span>de tarefas repetitivas</li>
         <li><i>Aumento da eficiência</i> em processos industriais</li>
         <li>Criação de soluções <b>inovadoras</b> para problemas complexos</li>
 
