--- a/Aula05/estados.html
+++ b/Aula05/estados.html
@@ -21,5 +21,17 @@
         <li><a href="riojaneiro.html">Rio de Janeiro</a></li>
         <li><a href="espiritosanto.html">Espírito Santo</a></li>
     </ul>
+
+    <h3>Região Sul</h3>
+
+    <p>A Região Sul do Brasil é crucial por sua forte economia, baseada na agricultura e na indústria, com destaque para a produção de soja, trigo, tabaco e vinhos. Também possui os melhores indicadores sociais do país, com menor mortalidade infantil e melhor saúde e educação. A região é um importante polo turístico e cultural, com influências europeias, especialmente alemãs e italianas. </p>
+
+    <p>Abaixo você pode conhecer cada estado dessa região</p>
+
+    <ul><li><a href="riograndesul.html">Rio Grande do Sul</a></li>
+        <li><a href="santacatarina.html">Santa Catarina</a></li>
+        <li><a href="parana.html">Paraná</a>
+    </ul>
+
 </body>
 </html>
