--- a/Aula05/estados.html
+++ b/Aula05/estados.html
@@ -1,4 +1,9 @@
- <title>Brasil</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <h1>Conhecendo as regiões do Brasil</h1>
@@ -12,9 +17,9 @@
 
     <ul>
         <li><a href="saopaulo.html">São Paulo</a></li>
+        <li><a href="minasgerais.html">Minas Gerais</a></li>
         <li><a href="riojaneiro.html">Rio de Janeiro</a></li>
         <li><a href="espiritosanto.html">Espírito Santo</a></li>
-        <li><a href="minasgerais.html">Minas Gerais</a></li>
     </ul>
 
     <h3>Região Sul</h3>
@@ -23,56 +28,49 @@
 
     <p>Abaixo você pode conhecer cada estado dessa região</p>
 
-    <ul>
-        <li><a href="parana.html">Paraná</a>
-        <li><a href="riograndesul.html">Rio Grande do Sul</a></li>
+    <ul><li><a href="riograndesul.html">Rio Grande do Sul</a></li>
         <li><a href="santacatarina.html">Santa Catarina</a></li>
+        <li><a href="parana.html">Paraná</a>
     </ul>
-
-    <h3>Região Nordeste</h3>
-
-    <p>A Região Nordeste é uma das cinco regiões do Brasil, conhecida por sua rica história, cultura diversificada e potencial econômico, incluindo o turismo, a agricultura e a indústria. É importante mencionar que foi a primeira região a ser ocupada pelos colonizadores portugueses e um dos maiores colégios eleitorais do país. </p>
-
-    <p>Abaixo você pode conhecer cada estado dessa região</p>
-
-    <ul>
-        <li><a href="alagoas.html">Alagoas</a></li>
-        <li><a href="bahia.html">Bahia</a></li>
-        <li><a href="ceara.html">Ceará</a></li>
-        <li><a href="maranhao.html">Maranhão</a></li>
-        <li><a href="paraiba.html">Paraíba</a></li>
-        <li><a href="pernambuco.html">Pernambuco</a></li>
-        <li><a href="piaui.html">Piauí</a></li>
-        <li><a href="riograndenorte.html">Rio Grande do Norte</a></li>
-        <li><a href="sergipe.html">Sergipe</a></li></ul>
 
     <h3>Região Norte</h3>
 
-    <p>A Região Norte do Brasil, a maior em extensão territorial, é essencial para o ecossistema global devido à sua rica biodiversidade, especialmente a Floresta Amazônica, que é o "pulmão do planeta". A região abriga povos tradicionais, como indígenas e quilombolas, que desempenham um papel vital na preservação da cultura e do meio ambiente. Além disso, a região tem um importante potencial econômico, com destaque para a extração vegetal e mineral, a agropecuária, a pesca, e a indústria, como a Zona Franca de Manaus. </p>
+     <p>A região Norte do Brasil é de fundamental importância para o país por vários motivos, incluindo sua grande extensão territorial, riqueza natural e diversidade cultural. A região é a maior em área e abriga a maior floresta tropical do mundo, a Amazônia, que desempenha um papel crucial na regulação do clima global e na preservação da biodiversidade. Além disso, a região é rica em recursos naturais, como minérios e madeira, e possui um grande potencial para geração de energia hidrelétrica. A cultura nortista, com sua rica herança indígena e tradições folclóricas, também contribui para a identidade nacional.</p>
 
     <p>Abaixo você pode conhecer cada estado dessa região</p>
-
-    <ul>
-        <li><a href="acre.html">Acre</a></li>
+     
+    <ul><li><a href="acre.html">Acre</a></li>
         <li><a href="amapa.html">Amapá</a></li>
         <li><a href="amazonas.html">Amazonas</a></li>
         <li><a href="para.html">Pará</a></li>
         <li><a href="rondonia.html">Rondônia</a></li>
         <li><a href="roraima.html">Roraima</a></li>
-        <li><a href="tocantins.html">Tocantins</a></li>
-    </ul>
+        <li><a href="tocantins.html">Tocantins</a></li></ul>
 
-    <h3>Região Centro-Oeste</h3>
+    <h3>Região Nordeste</h3>
 
-    <p>A Região Centro-Oeste do Brasil é um importante centro econômico e político, abrigando a capital federal, Brasília, e sendo um dos maiores produtores agrícolas do país, com destaque para soja, milho e algodão. A região também possui um rico patrimônio natural, com a presença de biomas como o Pantanal e o Cerrado, que demandam esforços de preservação. </p>
+    <p>A Região Nordeste possui grande importância para o Brasil em diversos aspectos, incluindo econômico, histórico, cultural e político. Historicamente, foi a região de partida da colonização e do desenvolvimento econômico do país, sendo berço da cultura brasileira. Economicamente, destaca-se como um importante polo produtor de frutas e outros produtos agrícolas, além de ter um significativo crescimento econômico nos últimos anos. Culturalmente, a região é rica em tradições, festas populares e manifestações artísticas, como o frevo e a capoeira. Politicamente, a região tem desempenhado um papel importante em diversas decisões e iniciativas, como a atuação do Consórcio Nordeste na aquisição de vacinas contra a COVID-19. </p>
+     
+     <p>Abaixo você pode conhecer cada estado dessa região</p>
 
-    <p>Abaixo você pode conhecer cada estado dessa região</p>
+     <ul><li><a href="maranhao.html">Maranhão</a></li>
+        <li><a href="piaui.html">Piauí</a></li>
+        <li><a href="ceara.html">Ceará</a></li>
+        <li><a href="riograndenorte.html">Rio Grande do Norte</a></li>
+        <li><a href="paraiba.html">Paraíba</a></li>
+        <li><a href="pernambuco.html">Pernambuco</a></li>
+        <li><a href="alagoas.html">Alagoas</a></li>
+        <li><a href="sergipe.html">Sergipe</a></li>
+        <li><a href="bahia.html">Bahia</a></li></ul>
 
-    <ul>
-        <li><a href="goias.html">Goiás</a></li>
+        <h3>Região Centro-Oeste</h3>
+
+        <p>A Região Centro-Oeste do Brasil é importante por diversos motivos, sendo um dos maiores produtores agrícolas do país, com destaque para a produção de grãos como soja, milho e algodão, e por abrigar a capital federal, Brasília. Além disso, a região é rica em recursos naturais, como o Pantanal, e possui um forte setor de serviços e turismo</p>
+        <p>Abaixo você pode conhecer cada estado dessa região</p>
+
+        <ul><li><a href="goias.html">Goiás</a></li>
         <li><a href="matogrosso.html">Mato Grosso</a></li>
         <li><a href="matogrossosul.html">Mato Grosso do Sul</a></li>
-        <li><a href="distritofederal.html">Distrito Federal</a></li>
-    </ul>
+        <li><a href="distritofederal.html">Distrito Federal</a></li></ul>
 </body>
 </html>
