--- a/Aula 08/exemplo02.html
+++ b/Aula 08/exemplo02.html
@@ -20,6 +20,10 @@
         text-transform: lowercase;
         color: crimson;
     }
+    a
+    {
+        text-decoration: none;
+    }
     </style>
 </head>
 <body>
@@ -28,7 +32,7 @@
     <h3>Exemplo de Transformação Do Texto</h3>
     <p>Aluno: <span class="t1">Maria Eduarda Miranda Solomão</span></p>
     <p>Curso: <span class="t2">MTEC em Informática para a Internet</span></p>
-    <button>Voltar</button>
+    <button><a href="index.html">Voltar</a></button>
 
 </body>
 </html>
