--- a/Aula 08/index.html
+++ b/Aula 08/index.html
@@ -10,13 +10,13 @@
 <p>abaixo teremos 4 exemplos para avançar no Estudo do CSS para texto.</p>
 <ul>
 <li><a href="exemplo 1.html">exemplo 1:</a>: Text Decoration</li>
-<li><a href="exemplo 2.html">exemplo 2</a>: Text Transformation</li>
-<li><a href="exemplo 3.html">exemplo 3</a>: text spacing</li>
-<li><a href="exemplo 4.html">exemplo 4</a>: text shadow</li>
+<li><a href="exemplo02.html">exemplo 2</a>: Text Transformation</li>
+<li><a href="exemploo3.html">exemplo 3</a>: text spacing</li>
+<li><a href="exemplo04.html">exemplo 4</a>: text shadow</li>
 </ul>
 <p>aqui estão alguns exemplos de como aplicar essas propriedades CSS em seus projetos</p>
 <ul>
-<li><a href="">exemplo 5</a>: font family</li>
+<li><a href="exemplo05.html">exemplo 5</a>: font family</li>
 <li><a href="">exemplo 6</a>: font size</li>
 
 </ul>
