--- a/Aula 09/index.html
+++ b/Aula 09/index.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0px;
-            padding: 0px;
-        }
+<style>
+body{
+    margin: 0;
+    padding: 0;
+}
+.conteudo
+{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(99, 247, 252);
+    font-size: 20px;
+    padding: 20px;
+color: white;
+}
+.menu > div{
+margin-right: 5px;    
+}
+.menu
+{
+display: flex;
+}
+.testes
+{
+display: flex;
+align-items: center;
+justify-content: center;
+height: 300px;
+background-color: rgb(255, 251, 138);
+}
+a{
+    color: white;
+}
+a:hover
+{
+text-decoration-color:black ;
+text-decoration: underline;    
+}
 
-        .conteudo {
-            display: flex;
-            justify-content: space-between;
-            background-color: rgb(255, 106, 0);
-            color: white;
-            font-size: 20px;
-            padding: 20px;
-        }
 
-        .menu>div {
-            margin-right: 5px;
-        }
-
-        .menu {
-            display: flex;
-        }
-
-        .testes {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 300px;
-            background-color:rgb(251, 133, 90);
-        }
-    </style>
+</style>
 </head>
 
 <body>
-    <div class="conteudo">
-        <div><img src="etecLogo.png" width="200px"></div>
-        <div class="menu">
-            <div>Mtec</div>
-            <div>Técnico</div>
-        </div>
-    </div>
-    <div class="testes">
-        <div>teste 1</div>
-        <div>teste 2</div>
-        <div>teste 3</div>
-        <div>teste 4</div>
-        <div>teste 5</div>
-    </div>
-</body>
+ 
+ <div class="conteudo">
+<div><img src="etec.png" width="100"></div>
+<div class="menu">
+<div><a href="exercicio1.html">exercicio 1</a></div>
+<div><a href="exercicio2.html">exercicio 2</a></div>
+<div><a href="exercicio3.html">exercicio 3</a></div>
+<div><a href="exercicio4.html">exercicio 4</a></div>
+<div><a href="exercicio5.html">exercicio 5</a></div>
+</div>
+ </div>   
 
+
+
+</body>
 </html>
