--- a/Aula 07/exercicio02.html
+++ b/Aula 07/exercicio02.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body {
-            background-color: lightgrey;
+            background-color: rgb(244, 81, 81);
         }
 
         p,
