--- a/Aula 09/provafinal.html
+++ b/Aula 09/provafinal.html
@@ -1,4 +1,3 @@
-,
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,6 +28,15 @@
             align-items: start;
             align-content: start;
         }
+
+        button {
+            border: 0px;
+            color: white;
+            background-color: red;
+            border-radius: 2px;
+            padding: 6px 12px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -37,25 +45,34 @@
         <img src="etecfg.png" height="70px">
         <img src="cps.png" height="70px">
     </div>
+
     <br>
+
     <div>
         <img src="etec.png" width="1400px">
     </div>
-    <br>
-    <br>
+
+    <br><br>
+
     <div class="noticia">
         <div class="bor">
             <img src="sobremesas_lacteas.jpg" alt="100%">
-        <div style="padding: 5px;">
-            <h3>Sobremesas Lácteas</h3>
-            <p>Alunos do curso Técnico em Alimentos <br> participaram da Oficina de Sobremesas Lácteas <br> realizada
-                pela Mococa SA.</p>
-                <div>
-            <button style= "background-color:red">Leia mais</button>
-        </div>
+            <div style="padding: 5px;">
+                <h3>Sobremesas Lácteas</h3>
+                <p>
+                    Alunos do curso Técnico em Alimentos <br>
+                    participaram da Oficina de Sobremesas Lácteas <br>
+                    realizada pela Mococa SA.
+                </p>
+
+                <div style="text-align: right;">
+                    <button>Leia mais</button>
                 </div>
+
+            </div>
         </div>
     </div>
+
 </body>
 
 </html>
